# mqttwzrd

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  flake-update.yml  gitlint.yml
src/: cli.rs  main.rs
