[package]
name = "mqttwzrd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["color", "derive", "suggestions"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
